# mips

./: CMakeLists.txt  README.md
docs/: ref.md
includes/: component.h  gate.h
src/: CMakeLists.txt  component.cpp
tests/: CMakeLists.txt  test_gate.cpp
